--- a/hosted/style.css
+++ b/hosted/style.css
@@ -50,7 +50,7 @@ nav:nth-child(1) {
 .domoForm {
     border: 2px solid #338acc;
     height: 35px;
-    width: 700px;
+    width: 1920px;
     margin-top:0px;
     padding-top:10px;
     background-color: #55acee;
@@ -61,14 +61,14 @@ nav:nth-child(1) {
 .domoForm label {
     display: inline-block;
     width: 75px;
-    margin-left: 10px;
     font-size: 1.2em;
     float: left;
     color: white;
 }
 
-.domoForm input[type=text] {
+.domoForm input {
     float:left;
+    margin-right: 10px;
 }
 
 .makeDomoSubmit {
@@ -253,6 +253,15 @@ h3.domoAge {
     width: 100px;
     font-weight: bold;
     padding-right: 40px;
+    font-size: 1.5em;
+}
+
+h3.domoHeight{
+    float:right;
+    text-align: right;
+    width: 200px;
+    font-weight: bold;
+    padding-right: 75px;
     font-size: 1.5em;
 }
 
