--- a/hosted/style.css
+++ b/hosted/style.css
@@ -92,7 +92,7 @@ nav:nth-child(1) {
 
 .mainForm {
     height: 300px;
-    width: 350px;
+    width: 400px;
     margin: 0 auto;
     padding-top: 350px;
     font-size: 1.2em;
@@ -104,7 +104,7 @@ nav:nth-child(1) {
 
 .mainForm label {
     display: inline-block;
-    width: 100px;
+    width: 150px;
     margin-right: 10px;
     text-align: right;
     font-size: 1.2em;
@@ -117,7 +117,7 @@ nav:nth-child(1) {
     margin: 0 auto;
     margin-top: 14px;
     font-size: 1.2em;
-    width: 100px;
+    width: 200px;
     background-color: #55acee;
     border-radius: 2px;
     border-color: #66acee;
@@ -135,10 +135,10 @@ nav:nth-child(1) {
     background-color: #338acc;
 }
 
-#user, #pass, #pass2 {
+#user, #pass, #pass2, #oldPass,#newPass,#newPass2 {
     text-align: center;
     font-size: 1.1em;
-    width: 180px;
+    width: 240px;
     border-radius: 6px;
 }
 
